--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" herf="rsc/font.css">
 		<!-- BOOTSTRAP 5.0-->
 	<link rel = "stylesheet" href = "css/bootstrap-5.0.2-dist/css/bootstrap.css">
+	<!--bootstrap cdn-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<!--normalize css-->
 	<link rel="stylesheet" href="rsc/normalize.css">
 	<!--font AWESOME  from CDNjs-->
@@ -33,31 +35,26 @@
 	<!--headeerr-->
 
 	<header class="header" id="intro">
-		<nav class="navbar">
-			<div class="container">
-				<div class="brand-and-toggler">
-					<a href="index.html" class="navbar-brand">
+		<nav class="navbar navbar-expand-lg ">
+			<div class="container-fluid">
+				<div class = "brand-and-toggler" >
+					<a href= "index.html" class = "navbar-brand">
 						Swift<span>#</span>App
 					</a>
 					<button type="button" class="navbar-toggler" id="navbar-toggler">
 						<i class="fa-solid fa-bars"></i>
 					</button>
 				</div>
-				<div class="navbar-collapse">
-					<ul class="navbar-nav">
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav me-auto">
 						
 						<li class="nav-item">
 							<a href="#detail" class="nav-link">swift</a>
 						</li>
 						<li class="nav-item">
-							<a href="#team" class="nav-link">Funcionalidades</a>
+							<a href="#team" class="nav-link">Caracteristicas</a>
 						</li>
-						<li class ="nav-item">
-							 <a href="#draw" class="nav-link">Portabilidad</a>
-						</li>
-						<li class="nav-item">
-							<a href="#faq" class="nav-link">Faq</a>
-						</li>
+					
 					  <li class="nav-item">
 							<a href="#pricing" class="nav-link">precio</a>
 						</li>
@@ -597,7 +594,7 @@
 		<!--<script src="rsc/Magnific-Popup-master/dist/jquery.magnific-popup.js"></script>-->
 		<!--FROM CDNJS-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js" integrity="sha512-8Y8eGK92dzouwpROIppwr+0kPauu0qqtnzZZNEF8Pat5tuRNJxJXCkbQfJ0HlUG3y1HB3z18CSKmUo7i2zcPpg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="rsc/owl.carousel.min.js"></script>
 		<!--custom js-->
 		<script src="js/script.js"></script>
